# Advent-of-Code-2025

./: .gitignore  Cargo.toml  README.md  all.py  all.rs
Day 01/Python/: sol.py
Day 01/Rust/: sol.rs
Day 02/Python/: sol.py
Day 02/Rust/: sol.rs
stub/Python/: sol.py
stub/Rust/: sol.rs
